Fixed footer alignment.

--- a/styles/JokeUniMainStyle.css
+++ b/styles/JokeUniMainStyle.css
@@ -79,12 +79,12 @@ body {
     }
     aside {
 		float:left;
-        width:15.7%;
+        width:16.5%;
         background-color:#E6E6E6;
         margin-left:5px;
         margin-top:5px;
         margin-bottom:5px;
-        padding-left:25px; 
+        padding-left:25px;
     }
     aside div {
         margin-top: 65%;
@@ -198,13 +198,3 @@ footer {
         width: 0%;
         margin: 1% 1% 0% 6%;
     }
-.mainPage{
-	background: linear-gradient(white,#234465);
-	box-shadow: 10px 10px 5px #888888;
-	border-radius: 10px;
-	margin-top:3%;
-	margin-left:7%;
-	margin-right:7%;
-	padding:25px;
-	font-size:16pt;
-}
